[metadata]
name = imghost
version = 0.0.1
description = A simple image hosting thing
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
setup_requires =
    setuptools
install_requires =
    Django < 4
    Pillow
    django-annoying
    django-pipeline
    django-widget-tweaks
    requests
    contextlib2
    getconf

[options.extras_require]
dev =
    django-debug-toolbar
    django-extensions
    ipython
prod =
    psycopg2
